# Robot-arm

./: README.md
Arm_urdf/: CMakeLists.txt  package.xml
Arm_urdf/config/: joint_names_Arm_urdf.yaml
Arm_urdf/launch/: display.launch  gazebo.launch
Arm_urdf/meshes/: base_link.STL
Arm_urdf/urdf/: Arm_urdf.csv  Arm_urdf.urdf
arm_urdf_new/arm_urdf_new/arm_urdf_new/: package.xml  setup.cfg  setup.py
arm_urdf_new/arm_urdf_new/arm_urdf_new/launch/: launch.py
arm_urdf_new/arm_urdf_new/arm_urdf_new/meshes/collision/: arm_rotate.STL  finger_1.STL  fingure_2.STL  lower_arm_cylinder.STL  red_block_2.STL  shoulder_base.STL  supporter.STL  wrist_cylinder.STL
arm_urdf_new/arm_urdf_new/arm_urdf_new/meshes/visual/: red_block_1.STL  upper_arm_cylinder.STL
arm_urdf_new/arm_urdf_new/arm_urdf_new/urdf/: Arm_urdf.urdf
